# earthkit-maps

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFST.in  Makefile  README.md  environment-minver.yml  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  on-push.yml
docs/: api.rst  conf.py  development.rst  index.md  index.rst  install.rst  user-guide.rst
docs/examples/: 01-introduction.ipynb  02-data-formats.ipynb  03-styles.ipynb  04-domains-and-coordinate-reference-systems.ipynb  05-input-grids.ipynb  automatic-styles.ipynb  basic-reduced-gaussian-demo.ipynb  beginner-guide.ipynb  cds.ipynb  data-projected-coordinates.ipynb  domains-bboxes.ipynb  domains-projections.ipynb  efi.ipynb  ensemble-postage-stamps.ipynb  era5-el-nino.ipynb  fieldlist-input.ipynb  gridded-scalar-data.ipynb  masking-gridded-data.ipynb  ozone.ipynb  projected-coordinates.ipynb  scatter.ipynb  schema.ipynb  styles.ipynb  t850-z500.ipynb  units.ipynb  wms-tiles.ipynb
docs/examples/gallery/: gallery.ipynb  sea-ice-thickness.ipynb  wind-barbs.ipynb
docs/guide/: index.rst
earthkit/maps/: __init__.py  _data.py  _definitions.py  alias.py  charts.py  data.py  definitions.py  inputs.py  layers.py  layout.py  legends.py  logos.py  nuts.py  quickplot.py  schema.py  schemas.py  shapes.py  styles.py  utils.py
earthkit/maps/charts/: __init__.py  _fonts.py  layers.py  layouts.py  legends.py  markers.py  styles.py  subplots.py  titles.py
earthkit/maps/data/: domains.yaml
earthkit/maps/domains/: __init__.py  bounds.py  cf_projections.py  crs.py  domain.py  natural_earth.py  optimal.py  projections.py
earthkit/maps/formats/: units.py
earthkit/maps/layers/: __init__.py  layers.py  metadata.py  subplots.py  superplots.py
earthkit/maps/metadata/: __init__.py  components.py  formatters.py  labels.py  units.py
earthkit/maps/sources/: __init__.py  data.py
magpye/: __init__.py  _data.py  _definitions.py  definitions.py  inputs.py  schema.py  utils.py
magpye/charts/: __init__.py  _fonts.py  layers.py  legends.py  markers.py  styles.py  subplots.py  titles.py
magpye/data/: domains.yaml
magpye/domains/: __init__.py  _crs.py  auto.py  bounds.py  crs.py  domain.py  natural_earth.py  projections.py
notebooks/: chart-domain-and-crs.ipynb  wms-tile-demo.ipynb
schemas/: default.yaml
tests/: test_00_version.py  test_data.py  test_schema.py  test_schemas.py  test_utils.py  test_version.py
tests/charts/: test_Chart.py  test_layers.py
tests/domains/: test_auto.py  test_bounds.py  test_crs.py  test_domain.py  test_natural_earth.py  test_optimal.py  test_parse.py  test_parse_crs.py
tests/metadata/: test_formatters.py  test_units.py
tests/styles/: test_Style.py  test_colors.py  test_levels.py  test_magics.py
(+70 files in other folders)
