[metadata]
name = earthkit-maps
license = Apache License 2.0
description = Geospatial visualisation tools and templates
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md
test_suite = tests

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    earthkit-data
    cartopy>=0.19.0
    matplotlib
    pandas
    geopandas
    pyyaml
    numpy
    xarray
    opencv-Python
    cf-units

[options.packages.find]
include = earthkit.*

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = False
ignore_missing_imports = True
